Fix account list bug: code 400 for CUSTOMER type
And another fix for USER too, which didn't present any bug yet, but it seemingly wasn't right.